# cx

./: .gitignore  Cargo.toml  LICENSE  README.md  mkdocs.yml  test_call.cx  test_no_assign.cx  test_one_arg.cx  test_simple.cx
compiler/cx/: Cargo.toml
compiler/cx-ast/: Cargo.toml
compiler/cx-ast/src/: ast.rs  data.rs  decomposition.rs  format.rs  lib.rs  macros.rs  parse.rs  pattern.rs  preparse.rs  registry.rs  symbols.rs  type_map.rs
compiler/cx-backend-cranelift/: Cargo.toml
compiler/cx-backend-cranelift/src/: codegen.rs  globals.rs  inst_calling.rs  instruction.rs  lib.rs  routines.rs  value_type.rs
compiler/cx-backend-llvm/: Cargo.toml
compiler/cx-backend-llvm/src/: arithmetic.rs  attributes.rs  globals.rs  instruction.rs  lib.rs  mangling.rs  routines.rs  typing.rs
compiler/cx-bytecode/: Cargo.toml
compiler/cx-bytecode/src/: aux_routines.rs  builder.rs  cx_maps.rs  deconstructor.rs  function_contracts.rs  global_stmts.rs  implicit_cast.rs  instruction_gen.rs  lib.rs  mir_lowering.rs
compiler/cx-compiler-ast/: Cargo.toml
compiler/cx-compiler-ast/src/: lib.rs  log.rs  parse.rs  parsing_tools.rs  preparse.rs
compiler/cx-compiler-bytecode/: Cargo.toml
compiler/cx-compiler-bytecode/src/: aux_routines.rs  builder.rs  cx_maps.rs  deconstructor.rs  global_stmts.rs  implicit_cast.rs  instruction_gen.rs  lib.rs
compiler/cx-compiler-mir/: Cargo.toml
compiler/cx-compiler-mir/src/: aux_routines.rs  builder.rs  cx_maps.rs  deconstructor.rs  global_stmts.rs  implicit_cast.rs  instruction_gen.rs  lib.rs
compiler/cx-compiler-typechecker/: Cargo.toml
compiler/cx-compiler-typechecker/src/: binary_ops.rs  casting.rs  checker.rs  deconstructed_types.rs  environment.rs  global_stmts.rs  importing.rs  intrinsic_types.rs  lib.rs  log.rs  mappings.rs  precontextualizing.rs  struct_typechecking.rs  structured_initialization.rs  templates.rs  type_mapping.rs  type_utils.rs  typechecker.rs  typemap_collapsing.rs  variable_destruction.rs
compiler/cx-data-pipeline/: Cargo.toml
compiler/cx-data-pipeline/src/: db.rs  directories.rs  internal_storage.rs  jobs.rs  lib.rs
compiler/cx-exec-pipeline/: Cargo.toml
compiler/cx-exec-pipeline/src/: lib.rs  pipeline.rs
compiler/cx-lsp/: Cargo.toml
compiler/cx-lsp/src/: data.rs  main.rs  typecheck_service.rs
compiler/cx-mir/: Cargo.toml
compiler/cx-mir/src/: aux_routines.rs  builder.rs  cx_maps.rs  deconstructor.rs  format.rs  function_contracts.rs  function_map.rs  global_stmts.rs  implicit_cast.rs  instruction_gen.rs  intrinsic_types.rs  lib.rs  lowering.rs  mir.rs  program.rs  registry.rs  symbol.rs  symbols.rs  type_context.rs
compiler/cx-mir/tests/: contextual_eq.rs
compiler/cx-parsing/: Cargo.toml
compiler/cx-parsing/src/: decomposition.rs  lib.rs  log.rs  macros.rs  parse.rs  preparse.rs
compiler/cx-pipeline/: Cargo.toml
compiler/cx-pipeline-data/: Cargo.toml
compiler/cx-pipeline-data/src/: config.rs  db.rs  directories.rs  internal_storage.rs  jobs.rs  lib.rs
compiler/cx-pipeline/src/: backends.rs  lib.rs  linker.rs  progress.rs  requests.rs  scheduler.rs  template_realizing.rs
compiler/cx-treesitter-grammar/: Cargo.toml  grammar.js  tree-sitter.json
compiler/cx-treesitter-grammar/queries/: highlights.scm
compiler/cx-treesitter-grammar/src/: grammar.json  node-types.json  parser.c
compiler/cx-typechecker/: Cargo.toml
compiler/cx-typechecker/src/: binary_ops.rs  builder.rs  casting.rs  environment.rs  lib.rs  log.rs  precontextualizing.rs  structured_initialization.rs  templates.rs  type_checking.rs  type_completion.rs  type_mapping.rs  typecheck_main.rs  typechecker.rs  variable_destruction.rs
compiler/cx/src/: args.rs  build.rs  init.rs  main.rs  pipeline.rs
tests/: Cargo.toml  build.rs  sum_type.cx-output  test.rs
tests/cases/: array_passing.cx  basic_arithmetic.cx  basic_compound_expr.cx  basic_for.cx  basic_strong_ptr.cx  basic_strong_ptr.cx-output  basic_succeeding_contract.cx  basic_template.cx  basic_template_type.cx  basic_while.cx  bool_tests.cx  complex_expressions.cx  conditional_lifetime.cx  conditional_lifetime.cx-output  deferring.cx  deferring.cx-output  define_macro.cx  define_macro.cx-output  delayed_cleanup.cx  delayed_cleanup.cx-output  destructive_move.cx  destructive_move.cx-output  enum_type.cx  enum_type.cx-output  function_contract.cx  function_contract.cx-output  global_in_template.cx  global_in_template.cx-output  mixed_static_instance.cx  padded_array.cx  short_circuit_eval.cx-output  static_member_function.cx  static_member_function.cx-output  struct_and_pointers.cx-output  struct_parameter.cx  struct_parameter.cx-output  sum_type.cx  sum_type.cx-output  template_include.cx  template_include.cx-output  (+6 more)
tests/cases/_unimplemented/: basic_template.cx
tests/cases/includes/: global_template_include.cx  template_include.cx  template_include_internal.cx
tests/compile-only/cx-extensions/: adopt_memory_place.cx  adopt_vector_drop.cx  consuming_receiver.cx  implicit_return_unsafe_block.cx  member_function_pointer.cx  owned_match_move_payload.cx  tagged_union_linear_attrs.cx  unpack_nodrop_field.cx
tests/compile-only/general/: bool_tests.cx  c_coercions.cx  compound_struct_decl.cx  function_typedef.cx  plain_struct_copy.cx  preprocessor_conditionals.cx  preprocessor_pragma_once.cx  reference_types.cx  same_name_struct_typedef.cx  uncopyable_copy.cx
tests/compile-only/move-semantics/: nocopy_for_continue_reinitialize.cx  nocopy_move_both_branches.cx  nocopy_reinitialize.cx  return_in_if_block.cx
tests/e2e/c-semantics/: basic_compound_expr.cx-output  basic_for.cx  basic_global_variable.cx  (+3 more)
tests/move_semantics/: nocopy_for_continue_reinitialize.cx  nocopy_loop_join.cx  nocopy_move_both_branches.cx  nocopy_reinitialize.cx  nodestruct_conditional_leak.cx
tests/runtime-errors/: postcond_violation.cx
tests/runtime_errors/: postcond_violation.cx  precond_violation.cx
tests/safe_fns/: basic_null_checking.cx  basic_safe.cx  nodestruct_scope_end.cx  safe_loop.cx
tests/type_errors/: instance_method_scope_call_error.cx  static_method_dot_call_error.cx
(+768 files in other folders)
