[workspace]
resolver = "2"

members = [
    "compiler/cx", "tests"
]

# For the time being, any optional packages (i.e. ones only compiled when passed a feature flag) should be included here
# so that cargo won't still attempt to build them in their absense.
exclude = [
    "compiler/cx-backend-llvm"
]