[package]
name = "integration-tests"
version = "0.1.0"
edition = "2021"

[features]
default = ["cx-data-pipeline/test", "cx-data-pipeline/test"]
backend-llvm = ["cx-pipeline/backend-llvm"]

[[test]]
name = "integration_tests"
path = "test.rs"
harness = true

[dependencies]
cx-data-pipeline = { path = "../compiler/cx-data-pipeline" }
cx-pipeline = { path = "../compiler/cx-pipeline" }

ctor = "0.1.23"