[package]
name = "integration-tests"
version = "0.1.0"
edition = "2021"

[features]
default = ["cx-pipeline-data/test", "cx-pipeline-data/test"]
backend-llvm = ["cx-pipeline/backend-llvm"]

[[test]]
name = "integration_tests"
path = "test.rs"
harness = true

[dependencies]
cx-pipeline-data = { path = "../compiler/cx-pipeline-data" }
cx-pipeline = { path = "../compiler/cx-pipeline" }

ctor = "0.1.23"