[package]
name = "cx-ast"
version = "0.0.0"
edition = "2021"
autotests = false

[dependencies]
cx-util = { path = "../cx-util" }

cx-ast-data = { path = "../cx-ast-data" }
cx-lexer-data = { path = "../cx-lexer-data" }
cx-typechecker-data = { path = "../cx-typechecker-data" }

cx-pipeline-data = { path = "../cx-pipeline-data" }
cx-log = { path = "../cx-log" }