[package]
name = "cx-backend-cranelift"
version = "0.0.0"
edition = "2021"
autotests = false

[dependencies]
cx-util = { path = "../cx-util" }
cx-data-bytecode = { path = "../cx-data-bytecode" }
cx-data-ast = { path = "../cx-data-ast" }

cranelift = "0.120.0"
cranelift-module = "0.120.0"
cranelift-native = "0.120.0"
cranelift-object = "0.120.0"