[package]
name = "cx-backend-cranelift"
version = "0.0.0"
edition = "2021"
autotests = false

[dependencies]
cx-util = { path = "../cx-util" }
cx-mir-data = { path = "../cx-mir-data" }
cx-ast-data = { path = "../cx-ast-data" }

cranelift = "0.120.0"
cranelift-module = "0.120.0"
cranelift-native = "0.120.0"
cranelift-object = "0.120.0"