[package]
name = "cx-backend-llvm"
version = "0.0.0"
edition = "2024"
autotests = false

[dependencies]
cx-bytecode-data = { path = "../cx-bytecode-data" }
cx-pipeline-data = { path = "../cx-pipeline-data" }
cx-util = { path = "../cx-util" }

inkwell = { version="0.6.0", default-features = false, features=["llvm18-1"] }