[package]
name = "cx-backend-llvm"
version = "0.0.0"
edition = "2024"
autotests = false

[dependencies]
cx-lmir = { path = "../cx-lmir" }
cx-pipeline-data = { path = "../cx-pipeline-data" }
cx-util = { path = "../cx-util" }

inkwell = { version="0.7.1", default-features = false, features=["llvm21-1"] }
