[package]
name = "cx-compiler-ast"
version = "0.0.0"
edition = "2021"
autotests = false

[dependencies]
cx-util = { path = "../cx-util" }

cx-data-ast = { path = "../cx-data-ast" }
cx-data-bytecode = { path = "../cx-data-bytecode" }
cx-data-pipeline = { path = "../cx-data-pipeline" }

cx-compiler-modules = { path = "../cx-compiler-modules" }