[package]
name = "cx-compiler-ast"
version = "0.0.0"
edition = "2021"
autotests = false

[dependencies]
cx-util = { path = "../cx-util" }

cx-data-ast = { path = "../cx-data-ast" }
cx-data-lexer = { path = "../cx-data-lexer" }
cx-data-typechecker = { path = "../cx-data-typechecker" }

cx-data-pipeline = { path = "../cx-data-pipeline" }
cx-log = { path = "../cx-log" }