[package]
name = "cx-compiler-bytecode"
version = "0.0.0"
edition = "2021"
autotests = false

[dependencies]
cx-compiler-ast = { path = "../cx-compiler-ast" }

cx-data-ast = { path = "../cx-data-ast" }
cx-data-typechecker = { path = "../cx-data-typechecker" }
cx-data-bytecode = { path = "../cx-data-bytecode" }

cx-util = { path = "../cx-util" }