[package]
name = "cx-compiler-typechecker"
version = "0.0.0"
edition = "2021"
autotests = false

[dependencies]
cx-data-ast = { path = "../cx-data-ast" }
cx-data-bytecode = { path = "../cx-data-bytecode" }
cx_data_pipeline = { path = "../cx_data_pipeline" }

cx-compiler-ast = { path = "../cx-compiler-ast" }
cx-compiler-modules = { path = "../cx-compiler-modules" }

cx-util = { path = "../cx-util" }
uuid = { version = "1.16.0", features = ["v4"] }