[package]
name = "cx-data-pipeline"
version = "0.1.0"
edition = "2024"

[features]
default = []
backend-llvm = []
test = []

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.16.0", features = ["v4"] }

cx-data-ast  = { path = "../cx-data-ast" }
cx-data-bytecode = { path = "../cx-data-bytecode" }