[package]
name = "cx-exec-pipeline"
version = "0.0.0"
edition = "2024"

[dependencies]

cx-compiler-ast = { path = "../cx-compiler-ast" }
cx-compiler-typechecker = { path = "../cx-compiler-typechecker" }
cx-compiler-bytecode = { path = "../cx-compiler-bytecode" }
cx-compiler-modules = { path = "../cx-compiler-modules" }

cx-data-ast = { path = "../cx-data-ast" }
cx-data-bytecode = { path = "../cx-data-bytecode" }
cx-backend-llvm = { path = "../cx-backend-llvm" }
cx-backend-cranelift = { path = "../cx-backend-cranelift" }
cx-util = { path = "../cx-util" }