[package]
name = "cx-exec-pipeline"
version = "0.0.0"
edition = "2021"
autotests = false

[features]
backend-llvm = ["dep:cx-backend-llvm"]

[dependencies]

cx-compiler-ast = { path = "../cx-compiler-ast" }
cx-compiler-typechecker = { path = "../cx-compiler-typechecker" }
cx-compiler-bytecode = { path = "../cx-compiler-bytecode" }
cx-compiler-modules = { path = "../cx-compiler-modules" }

cx-exec-data = { path = "../cx-exec-data" }

cx-data-ast = { path = "../cx-data-ast" }
cx-data-bytecode = { path = "../cx-data-bytecode" }
cx-backend-llvm = { path = "../cx-backend-llvm", optional = true }
cx-backend-cranelift = { path = "../cx-backend-cranelift"}
cx-util = { path = "../cx-util" }