[package]
name = "cx-mir"
version = "0.0.0"
edition = "2021"
autotests = false

[dependencies]
cx-parsing = { path = "../cx-parsing" }

cx-parsing-data = { path = "../cx-parsing-data" }
cx-typechecker-data = { path = "../cx-typechecker-data" }
cx-mir-data = { path = "../cx-mir-data" }

cx-util = { path = "../cx-util" }