[package]
name = "cx-parsing"
version = "0.0.0"
edition = "2021"
autotests = false

[dependencies]
cx-util = { path = "../cx-util" }

cx-parsing-data = { path = "../cx-parsing-data" }
cx-lexer-data = { path = "../cx-lexer-data" }
cx-typechecker-data = { path = "../cx-typechecker-data" }

cx-pipeline-data = { path = "../cx-pipeline-data" }
cx-log = { path = "../cx-log" }