[package]
name = "cx-parsing"
version = "0.0.0"
edition = "2021"
autotests = false

[dependencies]
cx-util = { path = "../cx-util" }

cx-ast = { path = "../cx-ast" }
cx-tokens = { path = "../cx-tokens" }
cx-mir = { path = "../cx-mir" }

cx-pipeline-data = { path = "../cx-pipeline-data" }
cx-log = { path = "../cx-log" }