[package]
name = "cx-pipeline-data"
version = "0.0.0"
edition = "2024"

[features]
default = []
test = []

[dependencies]
speedy = { version = "0.8.7" }

cx-lexer-data = { path = "../cx-lexer-data" }
cx-parsing-data  = { path = "../cx-parsing-data" }
cx-typechecker-data = { path = "../cx-typechecker-data" }
cx-bytecode-data = { path = "../cx-bytecode-data" }
