[package]
name = "cx-pipeline"
version = "0.0.0"
edition = "2024"

[features]
default = []
backend-llvm = ["dep:cx-backend-llvm"]

[dependencies]
speedy = { version = "0.8.7" }
fs2 = { version = "0.4.3" }

cx-lexer = { path = "../cx-lexer" }
cx-parsing = { path = "../cx-parsing" }
cx-typechecker = { path = "../cx-typechecker" }
cx-mir-lowering = { path = "../cx-mir-lowering" }
cx-backend-llvm = { path = "../cx-backend-llvm", optional = true }
cx-backend-cranelift = { path = "../cx-backend-cranelift" }

cx-pipeline-data = { path = "../cx-pipeline-data" }
cx-tokens = { path = "../cx-tokens" }
cx-ast = { path = "../cx-ast" }
cx-mir = { path = "../cx-mir" }
cx-lmir = { path = "../cx-lmir" }
cx-util = { path = "../cx-util" }
