[package]
name = "cx-pipeline"
version = "0.0.0"
edition = "2024"

[features]
default = []
backend-llvm = ["dep:cx-backend-llvm"]

[dependencies]
speedy = { version = "0.8.7" }
fs2 = { version = "0.4.3" }

cx-lexer = { path = "../cx-lexer" }
cx-parsing = { path = "../cx-parsing" }
cx-typechecker = { path = "../cx-typechecker" }
cx-bytecode = { path = "../cx-bytecode" }
cx-backend-llvm = { path = "../cx-backend-llvm", optional = true }
cx-backend-cranelift = { path = "../cx-backend-cranelift" }

cx-pipeline-data = { path = "../cx-pipeline-data" }
cx-lexer-data = { path = "../cx-lexer-data" }
cx-parsing-data = { path = "../cx-parsing-data" }
cx-typechecker-data = { path = "../cx-typechecker-data" }
cx-bytecode-data = { path = "../cx-bytecode-data" }
cx-util = { path = "../cx-util" }