[package]
name = "cx-treesitter-grammar"
version = "0.1.0"
edition = "2021"
build = "bindings/rust/build.rs"
include = [
    "bindings/rust/*",
    "grammar.js",
    "queries/*",
    "src/*",
    "tree-sitter.json",
]
description = "Tree-sitter grammar for the CX language"
license = "MIT"
repository = "https://github.com/muoup/cx"

[lib]
name = "cx_treesitter_grammar"
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[dev-dependencies]
tree-sitter = "0.25"

[build-dependencies]
cc = "1.1"
