[package]
name = "cx-typechecker"
version = "0.0.0"
edition = "2024"

[dependencies]
cx-lexer-data = { path = "../cx-lexer-data" }
cx-typechecker-data = { path = "../cx-typechecker-data" }
cx-fmir-data = { path = "../cx-fmir-data" }
cx-parsing-data = { path = "../cx-parsing-data" }
cx-pipeline-data = { path = "../cx-pipeline-data" }

cx-util = { path = "../cx-util" }
cx-log = { path = "../cx-log" }
