[package]
name = "cx-typechecker"
version = "0.0.0"
edition = "2024"

[dependencies]
cx-tokens = { path = "../cx-tokens" }
cx-mir = { path = "../cx-mir" }
cx-ast = { path = "../cx-ast" }
cx-pipeline-data = { path = "../cx-pipeline-data" }

cx-util = { path = "../cx-util" }
cx-log = { path = "../cx-log" }
