[package]
name = "cx-compiler"
version = "0.0.0"
edition = "2021"

[dependencies]
cx-compiler-ast = { path = "../cx-compiler-ast" }
cx-compiler-typechecker = { path = "../cx-compiler-typechecker" }
cx-compiler-bytecode = { path = "../cx-compiler-bytecode" }
cx-data-ast = { path = "../cx-data-ast" }
cx-data-bytecode = { path = "../cx-data-bytecode" }

cx-backend-cranelift = { path = "../cx-backend-cranelift" }